[PPANTT-55] feat: Rework getInstitutions  (#515)
Co-authored-by: Alessio Cialini <alessio.cialini@emeal.nttdata.com>